install(FILES   dynamic_local_basis.hh
                dynamic_local_coefficients.hh
                dynamic_local_interpolation.hh
                dynamic_local_finite_element.hh
                multidomain_local_finite_element_map.hh
        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/dune/copasi/finite_element")