install(FILES   dynamic_power_local_basis.hh
                dynamic_power_local_coefficients.hh
                dynamic_power_local_interpolation.hh
                dynamic_power_local_finite_element.hh
                dynamic_power_local_finite_element_map.hh
                multidomain_local_finite_element_map.hh
        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/dune/copasi/finite_element")